# crowd-imputation

./: .gitignore  CMakeLists.txt  README.md  constants.py  crowd_rep.py  cv_importer.py  display.py  followbot_sim.py  followbot_sim_ros.py  main.py  package.xml  pcf.py  pedestrian.py  requirements.txt  robot.py  setup.py  tracking-ros.py  tracking.py  tracking_ros.py  world.py
config/detection_fusion/: detection_fusion.yaml  fusion_topics.yaml  topics.yaml
config/drow_ros/: drow_params.yaml  drow_topics.yaml  topics_front.yaml  topics_rear.yaml
config/followbot_sim/: followbot_params.yaml  followbot_sim.yaml  followbot_topics.yaml  real_scenario_config.yaml  real_scenario_eth.yaml  topics_followbot.yaml
config/repbot_sim/: followbot_params.yaml  followbot_topics.yaml  real_scenario_config.yaml  static_crowd_config.yaml
data/prior-social-ties/: ETH-Hotel.npz  ETH-Univ.npz  HERMES-bo-360-050-050.npz  HERMES-bo-360-075-075.npz  HERMES-bo-360-090-090.npz  HERMES-uo-180-180-180.npz  HERMES-uo-300-300-300.npz  SDD-bookstore-0.npz  SDD-bookstore-1.npz  SDD-coupa-0.npz  SDD-coupa-3.npz  Zara.npz  Zara01.npz  Zara02.npz
launch/: crowdrepbot.launch  followbot.launch  followbot.sh  rwth_fusion.launch  test.launch
scripts/: detection_node.py  fusion_node.py  node.py  robot_node.py  simulation_node.py  simulator_node.py  tracking_node.py
src/crowdrep_bot/: __config__.py  __main__.py
src/followbot/: __main__.py  basic_geometry.py  basics_2d.py  cv_importer.py  display.py  followbot_sim.py  followbot_sim_ros.py  lidar2d.py  pedestrian.py  robot.py  (+5 more)
temp/: test-kf.py
(+171 files in other folders)
